/*
 *
 * Copyright 2024 kinops authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option go_package = "aiorch/pkg/inventoryservice";

package inventoryservice;

// DeploymentRequest is the request for deployment.
message InventoryRequest {
  string message = 1;
}

// DeploymentResponse is the response for deployment.
message InventoryResponse {
  string message = 1;
}

// InventoryManager is the deployment service.
service InventoryManager {
  // UnaryInventoryRequest is unary request for deployment.
  rpc UnaryInventoryRequest(InventoryRequest) returns (InventoryResponse) {}
  // ServerStreamingInventory is server side streaming of inventory updates.
  rpc ServerStreamingInventory(InventoryRequest) returns (stream InventoryResponse) {}
}